# agda-llvm

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Kladd.txt  LICENSE  Makefile  README.md  agda-llvm.agda-lib  agda-llvm.cabal  agda-programs.agda-lib  agda.agda-lib  bibliography.bib  cabal.project  examples.agda-lib  flake.nix  formalize.agda-lib  frågor-patrik.md  gen-callgraph  hlint.yaml  ideas.txt  logbook.lagda.md  newTreelessToGrin.hs  patrik-kommentarer.org  plan.md  program.ll  program.ll.callgraph.dot  rapport-kommentarer.org  report.lagda.tex  rewrite-rules.yml  shell.nix  simple-test  tex-watch
agda/: Boquist.agda  DownFrom.agda  Sum.grin
agda-programs/: Anf.agda  BT.agda  DotProduct.agda  DownFrom.agda  DownFromGhc.agda  DownFromOpt.agda  DownFromTail.agda  DownFromVec.agda  Example.agda  Fibonacci.agda  Fst.agda  Hello.agda  Identity.agda  Io.agda  NFib.agda  NFibS.agda  NFibSGhc.agda  Natural.agda  PrimForce.agda  Primes.agda  Reverse.agda  StaticContainers.agda  Sum.agda  SumUpTo.agda  TestGhc.agda  TyingTheKnot.agda  UpTo.agda  Vectorize.agda
agda-programs-not-working/: BT.agda  DownFromIO.agda  DownFromOptGhc.agda  DownFromVec.agda  Map.agda  MapDouble.agda  Mapping.agda  NFibGhc.agda  TyingTheKnot.agda  UpTo.agda
agda-programs-working/: DownFrom.agda  DownFromOpt.agda  Fst.agda  NFib.agda  NFibS.agda  UpTo.agda
app/: Main.hs
benchmarks/: time.txt  time_nfib.txt
examples/: Goal.agda  List.agda  Simple.agda  Vec.agda  anf.agda  natural.agda  vec.agda
html/: logbook.html  logbook.md
llvm/: program.ll  program.ll.callgraph.dot  program2  program_asm.s  program_opt.ll  program_opt.ll.callgraph.dot  test  test-1.ll  test-2.ll  test-3.ll  test-4.ll  test-4.ll.callgraph.dot  test-5.ll  test_asm.s
src/: Main.hs
src/Agda/Llvm/: Compiler.hs  Grin.hs  GrinInterpreter.hs  GrinTransformations.hs  GrinTypes.hs  HeapPointsTo.hs  HeapPointsToType.hs  Llvm.hs  Perceus.hs  SolveEquations.hs  TreelessTransform.hs  Utils.hs
src/Compiler/Grin/: Codegen.hs  Grin.hs  GrinInterpreter.hs  GrinTransformations.hs  HeapPointsTo.hs  HeapPointsToType.hs  Perceus.hs  SolveEquations.hs
src/Compiler/Llvm/: Codegen.hs  Compiler.hs  Llvm.hs
src/Compiler/Treeless/: TreelessTransform.hs
src/Formalize/: Experiment.agda  GlobalScope.agda  MiniGrin.agda  MiniGrin2.agda  README.md  Scope.agda  Scope2.agda  StandardSemantics.agda  Syntax.agda  Test.agda
src/Formalize/Scope/: Base.agda
src/Formalize/Syntax/: Common.agda  Grin.agda  Grin2.agda  RcGrin.agda  RcGrin2.agda
src/Formalize/Utils/: Erase.agda
src/Utils/: Foldable.hs  List.hs  List1.hs  Map.hs  Monad.hs  Set.hs  Utils.hs
test/: Main.hs  Normalise.err  Test.hs  introduceRegisters1.golden  normalise.golden  rightHoistFetch.golden  rightHoistFetch1.golden  rightHoistFetch2.golden  useRegister.golden  useRegisters1.golden  useRegisters2.golden  useRegisters3.golden
