cabal-version:      2.4
name:               agda-llvm
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Martin Fredin
maintainer:         fredin.martin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
      -Werror
      -Werror=cpp-undef
      -Werror=deprecated-flags
      -Werror=deriving-typeable
      -Werror=dodgy-exports
      -Werror=dodgy-foreign-imports
      -Werror=dodgy-imports
      -Werror=duplicate-exports
      -Werror=empty-enumerations
      -Werror=identities
      -Werror=inaccessible-code
      -Werror=inline-rule-shadowing
      -Werror=missing-fields
      -Werror=missing-home-modules
      -Werror=missing-methods
      -Werror=missing-pattern-synonym-signatures
      -Werror=missing-signatures
      -Werror=noncanonical-monad-instances
      -Werror=noncanonical-monoid-instances
      -Werror=overflowed-literals
      -Werror=overlapping-patterns
      -Werror=semigroup
      -Werror=simplifiable-class-constraints
      -Werror=star-binder
      -Werror=star-is-type
      -Werror=tabs
      -Werror=typed-holes
      -Werror=unbanged-strict-patterns
      -Werror=unrecognised-pragmas
      -Werror=unrecognised-warning-flags
      -Werror=unticked-promoted-constructors
      -Werror=unused-do-bind
      -Werror=unused-foralls
      -Werror=warnings-deprecations
      -Werror=wrong-do-bind


executable agda-llvm
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Agda.Llvm.Compiler
    Agda.Llvm.Grin
    Agda.Llvm.Llvm
    Agda.Llvm.Utils
    Agda.Llvm.HeapPointsTo
    Agda.Llvm.GrinInterpreter
    Agda.Llvm.TreelessTransform
       
  default-extensions:
    LambdaCase
    PatternSynonyms
    DeriveGeneric

  build-depends:    
    , Agda       >= 2.6.4
    , base       >= 4.12.0.0 && < 4.19
    , containers >= 0.6.0.1  && < 0.7
    , deepseq    >= 1.4.4.0  && < 1.5            
    , mtl
    , extra

  hs-source-dirs:   src
  default-language: GHC2021

test-suite agda-tests
  import:           warnings

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/, src/
  main-is:          Main.hs
  other-modules:
    Agda.Llvm.Compiler
    Agda.Llvm.Grin
    Agda.Llvm.Llvm
    Agda.Llvm.Utils
    Agda.Llvm.HeapPointsTo
    Agda.Llvm.GrinInterpreter
    Agda.Llvm.TreelessTransform

  default-extensions:
    LambdaCase
    PatternSynonyms

  build-depends:    
    , Agda         >= 2.6.4
    , base         >= 4.12.0.0 && < 4.19
    , bytestring
    , containers   >= 0.6.0.1  && < 0.7
    , deepseq      >= 1.4.4.0  && < 1.5            
    , extra
    , filepath
    , mtl
    , tasty        >= 1.1.0.4 && < 1.5
    , tasty-silver >= 3.1.13  && < 3.4
    , text
    , unix-compat      >= 0.4.3.1 && < 0.8

  default-language: GHC2021
