cabal-version:      2.4
name:               agda-llvm
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Martin Fredin
maintainer:         fredin.martin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options:
    -W
    -- ghc-options:
    --   -Werror
    --   -Werror=cpp-undef
    --   -Werror=deprecated-flags
    --   -Werror=deriving-typeable
    --   -Werror=dodgy-exports
    --   -Werror=dodgy-foreign-imports
    --   -Werror=dodgy-imports
    --   -Werror=duplicate-exports
    --   -Werror=empty-enumerations
    --   -Werror=identities
    --   -Werror=inaccessible-code
    --   -Werror=inline-rule-shadowing
    --   -Werror=missing-fields
    --   -Werror=missing-home-modules
    --   -Werror=missing-methods
    --   -Werror=missing-pattern-synonym-signatures
    --   -Werror=missing-signatures
    --   -Werror=noncanonical-monad-instances
    --   -Werror=noncanonical-monoid-instances
    --   -Werror=overflowed-literals
    --   -Werror=overlapping-patterns
    --   -Werror=semigroup
    --   -Werror=simplifiable-class-constraints
    --   -Werror=star-binder
    --   -Werror=star-is-type
    --   -Werror=tabs
    --   -Werror=typed-holes
    --   -Werror=unbanged-strict-patterns
    --   -Werror=unrecognised-pragmas
    --   -Werror=unrecognised-warning-flags
    --   -Werror=unticked-promoted-constructors
    --   -Werror=unused-do-bind
    --   -Werror=unused-foralls
    --   -Werror=warnings-deprecations
    --   -Werror=wrong-do-bind
    --   
    --   -- Warnings
    --   -Wunused-imports

library 
  import: warnings
  exposed-modules:
    Agda.Llvm.Compiler
    Agda.Llvm.Grin
    Agda.Llvm.GrinTypes
    Agda.Llvm.GrinInterpreter
    Agda.Llvm.GrinTransformations
    Agda.Llvm.HeapPointsTo
    Agda.Llvm.HeapPointsToType
    Agda.Llvm.Llvm
    Agda.Llvm.Perceus
    Agda.Llvm.SolveEquations
    Agda.Llvm.TreelessTransform
    Agda.Llvm.Utils
       
  default-extensions:
    LambdaCase
    PatternSynonyms

  build-depends:    
    , Agda         >= 2.6.4
    , base         >= 4.12.0.0 && < 4.20
    , containers   >= 0.6.0.1  && < 0.7
    , deepseq      >= 1.4.4.0  && < 1.5            
    , filepath
    , transformers >= 0.6.0.2  && < 0.7
    , mtl
    , extra

  hs-source-dirs:   src
  default-language: GHC2021


executable agda-llvm
  import: warnings
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , Agda       >= 2.6.4
    , agda-llvm
    , base       >= 4.12.0.0 && < 4.20

  default-extensions:
    LambdaCase
    PatternSynonyms

  default-language: GHC2021

-- test-suite test
--   import:           warnings
--
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test/
--   main-is:          Main.hs
--
--   default-extensions:
--     LambdaCase
--     PatternSynonyms
--
--   build-depends:    
--     , Agda         >= 2.6.4
--     , base         >= 4.12.0.0 && < 4.20
--     , bytestring
--     , containers   >= 0.6.0.1  && < 0.7
--     , deepseq      >= 1.4.4.0  && < 1.5            
--     , extra
--     , filepath
--     , mtl
--     , tasty        >= 1.1.0.4 && < 1.5
--     , tasty-silver >= 3.1.13  && < 3.4
--     , text
--     , unix-compat      >= 0.4.3.1 && < 0.8
--     , agda-llvm
--
--   default-language: GHC2021
