cabal-version:      2.4
name:               agda-llvm
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Martin Fredin
maintainer:         fredin.martin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common commons
  default-language: GHC2021
  default-extensions:
    LambdaCase
    PatternSynonyms
    OverloadedRecordDot      
    BlockArguments        
    PatternSynonyms
    LexicalNegation
  ghc-options:
    -W
    -- ghc-options:
    --   -Werror
    --   -Werror=cpp-undef
    --   -Werror=deprecated-flags
    --   -Werror=deriving-typeable
    --   -Werror=dodgy-exports
    --   -Werror=dodgy-foreign-imports
    --   -Werror=dodgy-imports
    --   -Werror=duplicate-exports
    --   -Werror=empty-enumerations
    --   -Werror=identities
    --   -Werror=inaccessible-code
    --   -Werror=inline-rule-shadowing
    --   -Werror=missing-fields
    --   -Werror=missing-home-modules
    --   -Werror=missing-methods
    --   -Werror=missing-pattern-synonym-signatures
    --   -Werror=missing-signatures
    --   -Werror=noncanonical-monad-instances
    --   -Werror=noncanonical-monoid-instances
    --   -Werror=overflowed-literals
    --   -Werror=overlapping-patterns
    --   -Werror=semigroup
    --   -Werror=simplifiable-class-constraints
    --   -Werror=star-binder
    --   -Werror=star-is-type
    --   -Werror=tabs
    --   -Werror=typed-holes
    --   -Werror=unbanged-strict-patterns
    --   -Werror=unrecognised-pragmas
    --   -Werror=unrecognised-warning-flags
    --   -Werror=unticked-promoted-constructors
    --   -Werror=unused-do-bind
    --   -Werror=unused-foralls
    --   -Werror=warnings-deprecations
    --   -Werror=wrong-do-bind
    --   
    --   -- Warnings
    --   -Wunused-imports

library 
  import: commons
  exposed-modules:
    Compiler.Grin.Codegen
    Compiler.Grin.Grin
    Compiler.Grin.GrinInterpreter
    Compiler.Grin.GrinTransformations
    Compiler.Grin.HeapPointsTo
    Compiler.Grin.HeapPointsToType
    Compiler.Grin.Perceus
    Compiler.Grin.SolveEquations
    Compiler.Llvm.Codegen
    Compiler.Llvm.Compiler
    Compiler.Llvm.Llvm
    Compiler.Treeless.TreelessTransform
    Utils.Foldable
    Utils.List
    Utils.List1
    Utils.Map
    Utils.Monad
    Utils.Set
    Utils.Utils

  build-depends:    
    , Agda         >= 2.6.4
    , base         >= 4.12.0.0 && < 4.20
    , containers   >= 0.6.0.1  && < 0.7
    , deepseq      >= 1.4.4.0  && < 1.5            
    , filepath
    , transformers >= 0.6.0.2  && < 0.7
    , mtl
    , extra
    , pretty

  hs-source-dirs:   src

library gen 
  hs-source-dirs: gen
  exposed-modules:  
      Formalize.Test
    , Formalize.Syntax.Grin
    , Formalize.Syntax.RcGrin
    , Formalize.Scope.Base
    , Formalize.MiniGrin
    , Scope.Core
    , Scope.In
    , Scope.Split
    , Scope.Sub

  build-depends:
    , base       >= 4.12.0.0 && < 4.20
  ghc-options:
    -fno-warn-incomplete-patterns
    -Wno-incomplete-patterns
    -fno-warn-name-shadowing
  default-language: GHC2021


executable agda-llvm
  import: commons
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , Agda       >= 2.6.4
    , agda-llvm
    , base       >= 4.12.0.0 && < 4.20

test-suite test
  import:           commons

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/
  main-is:          Test.hs

  build-depends:    
    , Agda         >= 2.6.4
    , agda-llvm
    , base         >= 4.12.0.0 && < 4.20
    -- , bytestring
    -- , containers   >= 0.6.0.1  && < 0.7
    -- , deepseq      >= 1.4.4.0  && < 1.5            
    -- , extra
    -- , filepath
    -- , mtl
    , tasty        >= 1.1.0.4 && < 1.5
    , tasty-quickcheck
    , QuickCheck
    -- , tasty-silver >= 3.1.13  && < 3.4
    -- , text
    -- , unix-compat      >= 0.4.3.1 && < 0.8
